--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
-@model IndexModel
+@model WebApplicationDrexlerMacaspac.Pages.Index
+
 @{
     ViewData["Title"] = "Home page";
 }
@@ -8,32 +9,45 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
-<div class="container">
-    <h1 class="my-4">Car List</h1>
 
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Make</th>
-                <th>Model</th>
-                <th>Year</th>
-                <th>Color</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var car in Model.Cars)
-            {
-                    <tr>
-                        <td>@car.Make</td>
-                        <td>@car.Model</td>
-                        <td>@car.Year</td>
-                        <td>@car.Color</td>
-                    </tr>
-            }
-        </tbody>
-    </table>
-</div>
-
-@section Scripts {
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-}
+<table class="table">
+    <thead>
+        <tr>
+            <th scope="col">Make
+                <div class="btn-group" role="group" aria-label="">
+                    <a href="~/index?sortBy=make&sortAsc=false" type="button" class="btn btn-secondary">&lt;</a>
+                    <a href="~/index?sortBy=make&sortAsc=true" type="button" class="btn btn-secondary">&gt;</a>
+                </div>
+            </th>
+            <th scope="col">Model
+                <div class="btn-group" role="group" aria-label="">
+                    <a href="~/index?sortBy=model&sortAsc=false" type="button" class="btn btn-secondary">&lt;</a>
+                    <a href="~/index?sortBy=model&sortAsc=true" type="button" class="btn btn-secondary">&gt;</a>
+                </div>
+            </th>
+            <th scope="col">Year
+                <div class="btn-group" role="group" aria-label="">
+                    <a href="~/index?sortBy=year&sortAsc=false" type="button" class="btn btn-secondary">&lt;</a>
+                    <a href="~/index?sortBy=year&sortAsc=true" type="button" class="btn btn-secondary">&gt;</a>
+                </div>
+            </th>
+            <th scope="col">Color
+                <div class="btn-group" role="group" aria-label="">
+                    <a href="~/index?sortBy=color&sortAsc=false" type="button" class="btn btn-secondary">&lt;</a>
+                    <a href="~/index?sortBy=color&sortAsc=true" type="button" class="btn btn-secondary">&gt;</a>
+                </div>
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var car in Model.Cars)
+        {
+                <tr>
+                    <td>@car.Make</td>
+                    <td>@car.Model</td>
+                    <td>@car.Year</td>
+                    <td>@car.Color</td>
+                </tr>
+        }
+    </tbody>
+</table>
